[gd_scene load_steps=20 format=3 uid="uid://uwxfr20k1mn3"]

[ext_resource type="Script" path="res://Scenes/Player/Player.gd" id="1_phk7p"]
[ext_resource type="SpriteFrames" uid="uid://d3yqus1in2jsl" path="res://Resources/Player/PlayerSpriteFrames.tres" id="2_1yc73"]
[ext_resource type="PackedScene" uid="uid://c0f7n0y0tqlul" path="res://Scenes/Components/HealthComponent.tscn" id="3_cgp6e"]
[ext_resource type="PackedScene" uid="uid://cd2tlp65h22wn" path="res://Scenes/Components/HurtboxComponent.tscn" id="5_lexje"]
[ext_resource type="PackedScene" uid="uid://bco2bxp5k2mng" path="res://Scenes/Components/HitboxComponent.tscn" id="6_kn5cg"]
[ext_resource type="Script" path="res://Scenes/States/StateMachine.gd" id="7_p0ur1"]
[ext_resource type="Script" path="res://Scenes/States/PlayerStates/Idle.gd" id="8_v65ks"]
[ext_resource type="Script" path="res://Scenes/States/PlayerStates/Running.gd" id="9_h3v0b"]
[ext_resource type="Script" path="res://Scenes/States/PlayerStates/Jumping.gd" id="10_v5qa6"]
[ext_resource type="Script" path="res://Scenes/States/PlayerStates/Crouching.gd" id="11_pg6aa"]
[ext_resource type="Script" path="res://Scenes/States/PlayerStates/Attacking.gd" id="12_gfcvy"]
[ext_resource type="Script" path="res://Scenes/States/PlayerStates/Dashing.gd" id="12_xx4g3"]
[ext_resource type="Script" path="res://Scenes/States/PlayerStates/WallSlide.gd" id="13_diuc5"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_rnpju"]
radius = 9.0
height = 48.0

[sub_resource type="Gradient" id="Gradient_ykdcj"]
offsets = PackedFloat32Array(0, 0.534031, 0.764398)
colors = PackedColorArray(0.905769, 0.905769, 0.905769, 1, 0.362829, 0.362829, 0.362829, 1, 0.566967, 0.566967, 0.566966, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6w5v4"]
gradient = SubResource("Gradient_ykdcj")
use_hdr = true

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_05ig1"]
lifetime_randomness = 0.5
particle_flag_disable_z = true
emission_shape = 1
emission_sphere_radius = 6.03
gravity = Vector3(2.08165e-12, -98, 2.08165e-12)
scale_min = 3.0
scale_max = 5.0
color = Color(0.552941, 0.607843, 0.721569, 1)
color_ramp = SubResource("GradientTexture1D_6w5v4")

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_4lglj"]
radius = 9.0
height = 48.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sftli"]

[node name="Player" type="CharacterBody2D"]
floor_stop_on_slope = false
floor_max_angle = 1.0472
platform_wall_layers = 4
script = ExtResource("1_phk7p")
dash_unlocked = true
wall_slide_unlocked = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_rnpju")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = ExtResource("2_1yc73")
animation = &"dash_forwards"
autoplay = "default"

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(2, 2)

[node name="WallHugParticles" type="GPUParticles2D" parent="."]
position = Vector2(12, 0)
emitting = false
amount = 15
process_material = SubResource("ParticleProcessMaterial_05ig1")
lifetime = 0.7
speed_scale = 0.6
explosiveness = 0.15

[node name="HealthComponent" parent="." instance=ExtResource("3_cgp6e")]

[node name="HurtboxComponent" parent="." instance=ExtResource("5_lexje")]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
position = Vector2(0, 8)
shape = SubResource("CapsuleShape2D_4lglj")

[node name="HitboxComponent" parent="." instance=ExtResource("6_kn5cg")]
position = Vector2(19, 9)

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
shape = SubResource("RectangleShape2D_sftli")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_p0ur1")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("8_v65ks")
player = NodePath("../..")

[node name="Running" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("9_h3v0b")
player = NodePath("../..")

[node name="Jumping" type="Node" parent="StateMachine" node_paths=PackedStringArray("WallSlideCooldown", "player")]
script = ExtResource("10_v5qa6")
WallSlideCooldown = NodePath("../../Timers/WallSlideCooldownTimer")
player = NodePath("../..")

[node name="Crouching" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("11_pg6aa")
player = NodePath("../..")

[node name="Attacking" type="Node" parent="StateMachine" node_paths=PackedStringArray("attack_reset_timer", "player")]
script = ExtResource("12_gfcvy")
attack_reset_timer = NodePath("../../Timers/AttackResetTimer")
player = NodePath("../..")

[node name="Dashing" type="Node" parent="StateMachine" node_paths=PackedStringArray("ghost_timer", "dash_timer", "cooldown_timer", "player")]
script = ExtResource("12_xx4g3")
ghost_timer = NodePath("../../Timers/GhostTrailSpawnTimer")
dash_timer = NodePath("../../Timers/DashDurationTimer")
cooldown_timer = NodePath("../../Timers/DashCooldownTimer")
player = NodePath("../..")

[node name="WallSlide" type="Node" parent="StateMachine" node_paths=PackedStringArray("WallSlideCooldown", "player")]
script = ExtResource("13_diuc5")
WallSlideCooldown = NodePath("../../Timers/WallSlideCooldownTimer")
player = NodePath("../..")

[node name="Timers" type="Node" parent="."]

[node name="AttackResetTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="DashDurationTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="DashCooldownTimer" type="Timer" parent="Timers"]
wait_time = 0.4
one_shot = true

[node name="GhostTrailSpawnTimer" type="Timer" parent="Timers"]
wait_time = 0.05

[node name="WallSlideCooldownTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true
